# dephasing-code-base

./: .gitignore  Makefile  QE_to_pydeph.sh  README.md  build.sh  config.mk  config.yml  configure.sh  delta_setup.sh  input_E.yml  input_T2a  input_T2a.yml  input_T2b.yml  input_T2d.yml  input_T2hfi  input_T2st.yml  makefile_temp2  nersc_setup.sh  nersc_setup2.sh  pydeph_to_QE.sh  pyproject.toml  pytest.ini  requirements.txt  requirements_CI.txt  requirements_GPU.txt  scr.sh  token_git
INSTALL_SCRIPTS/: delta_setup.sh  nersc_setup.sh
OLD_VERS/: T2_calc.py  auto_correlation_deph_module.py  energy_fluct_mod.py  taylor_series.py
clean_vers_files/: Makefile  spin_module.f90
dependencies/: requirements-HPC-Delta.txt  requirements-HPC.txt  requirements-HPC_GPU.txt  requirements.txt  requirements_GPU.txt
doc/: conf.py  index.rst  prerequisites.rst  running.rst  theory.rst
input_files/: input_E.yml  input_T2a.yml  input_T2b.yml  input_T2d.yml  input_T2st.yml
pydephasing/: Ehrenfest_field.py  Liouville_solver.py  PAWinterface.py  T2_calc.py  T2_calc_handler.py  T2_classes.py  __main__.py  atomic_list_struct.py  auto_correl_inhom_driver.py  auto_correlation_deph_module.py  auto_correlation_driver.py  auto_correlation_module.py  auto_correlation_relax_module.py  auto_correlation_spph_mod.py  auto_correlation_stat_module.py  build_interact_grad.py  build_unpert_struct.py  calculation_drivers.py  compute_LR_elec_decoher.py  compute_LR_spin_decoher.py  compute_QA_spin_decoher.py  compute_dyndec_dephas.py  compute_exc_dephas.py  compute_hfi_dephas.py  compute_hfi_dephas_stat.py  compute_zfs_dephas.py  compute_zfs_hfi_dephas.py  create_displ_struct_files.py  elec_dens_matr.py  elec_dyn_solvers.py  elec_light_inter.py  elec_ph_inter.py  electr_ph_dens_matr.py  electron_density.py  electron_phonon.py  electronic_hamiltonian.py  energy_fluct_mod.py  extract_dephas_data.py  extract_ph_data.py  fermi_golden_rule.py  (+39 more)
pydephasing.egg-info/: PKG-INFO  SOURCES.txt
tests/: config.yml  test.py  test2.py  (+1 more)
(+120 files in other folders)
