[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["pydeph", "pydephasing", "pydephasing/common", "pydephasing/real_time", "pydephasing/parallelization", "pydephasing/spin_model", "pydephasing/unit_tests", "pydephasing/utilities", "pydephasing/wannier_interface"]
exclude = ["TESTS"]

[project]
name = "pydephasing"
version = "1.0.0"
authors = [
    { name = "Jacopo Simoni", email="jsimoni@wisc.edu" },
]
description = "The pydephasing code is designed to perform non Markovian and Lindbladian dynamics of spin and electronic systems"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
	"Programming Language :: Python :: 3",
	"Operating System :: OS Independent",
]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
